Add Sykemelding mapping and application-local.yml #deploy-test-sykemelding-api
Implemented a comprehensive mapping strategy in SykemeldingValidateMappingStrategy to transform Sykemelding to ReceivedSykemeldingDTO. Introduced application-local.yml for local development configuration with default dummy values for IBM MQ connection and sykemelding-proxy consumer. Revised associated data structures and test cases to support new mapping functionalities.